--- a/css/site.css
+++ b/css/site.css
@@ -1,16 +1,21 @@
 :root {
-    --bg: #fafafa;
+    --bg: #000000;
     --font: "Archivo", sans-serif;
     --font-display: "Archivo Narrow", sans-serif;
-    --hotpink: #e94057;
-    --orange: #f27121;
+    --hotpink: #af0505;
+    --orange: #faf8f8fd;
     --gradient: linear-gradient(35deg, var(--orange), var(--hotpink));
   }
   
   body {
     margin: auto;
     min-height: 100vh;
-    background: var(--bg);
+    /* background: var(--bg); */
     font-family: var(--font);
+    background-image: url(../img/fondo.jpg);
+    background-size: 105%;
+    background-position-y: 90%;
+    background-repeat: no-repeat;
+    background-size: auto; 
   }
   
