--- a/css/index.css
+++ b/css/index.css
@@ -49,59 +49,49 @@ p{
     position: relative;
     color: #fff;
 }
-
-.paginacion{
-     font-size: 1.5rem;
-    /* background-position: 50% 100%; */
-    /* background-size: cover; */
-    /* background-attachment: fixed; */
-    /* background-repeat: no-repeat; */
+.paginacion {
+    font-size: 1.5rem;
     padding: 0.005px;
-    /* position: relative; */
-    /* color: #fff;  */
     background-color: #1f1f1f;
-}
-
-a{
-  color: #fff;
-  font-size: 3rem; 
-}
-
-.lista{
-    /* position: relative;
-	top: 50%;
-	left: 40%; */
+  }
+  
+  a {
+    color: #fff;
+    font-size: 3rem;
+  }
+  
+  .lista {
     list-style-type: none;
     display: flex;
-    -webkit-box-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
     align-items: center;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     width: 100%;
-}
-
-.items{
+  }
+  
+  .items {
     margin: 1px;
     letter-spacing: 1px;
-} 
-
-.page-link{
+    cursor: pointer; /* Cambia el cursor a un puntero */
+  }
+  
+  .page-link {
     color: #f7f2f2;
     font-size: 4rem;
     text-align: center;
-}
-
-.noSelect {
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	-webkit-tap-highlight-color: transparent;
-}
+  }
+  
+  .noSelect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+  }
+  
 
 .button {
 	cursor: pointer;
@@ -259,3 +249,6 @@ a{
       margin-right: auto;
     }
 }
+
+
+  
