--- a/css/juego.css
+++ b/css/juego.css
@@ -318,15 +318,25 @@ button:focus {
   display: none;
 }
 
-.footer{
-  position: absolute;
+.footer {
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 40px;
   color: white;
+  text-align: center; /* Centrar el contenido del footer */
 }
- 
-.volver{
+
+.volver {
   color: white;
   text-decoration: none;
+  position: fixed;
+  left: 10px; /* Ajusta según sea necesario para posicionar la flecha en el lado izquierdo */
+  bottom: 10px; /* Ajusta según sea necesario para posicionar la flecha en la parte inferior */
+}
+
+.arrow::before {
+  content: "\2190 "; /* Flecha hacia la izquierda Unicode */
+  font-size: 2.5em; /* Tamaño más grande de la flecha */
+  position: relative;
 }
